[package]
name = "resid-rs"
version = "0.8.0-pre"
authors = ["Sebastian Jastrzebski <sebby2k@gmail.com>"]
description = "Port of reSID, a MOS6581 SID emulator engine, to Rust"
license = "GPL-3.0+"
repository = "https://github.com/digitalstreamio/resid-rs"
readme = "README.md"
keywords = ["c64", "commodore", "emulator", "resid", "sid"]
categories = ["emulators"]

[lib]
name = "resid"

[dependencies]
bit_field = "0.9"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "sampler_bench"
harness = false
