[package]
name = "resid-rs"
version = "1.1.0"
edition = "2018"
authors = ["Sebastian Jastrzebski <sebby2k@gmail.com>"]
description = "Port of reSID, a MOS6581 SID emulator engine, to Rust"
license = "GPL-3.0+"
repository = "https://github.com/binaryfields/resid-rs"
readme = "README.md"
keywords = ["c64", "commodore", "emulator", "resid", "sid"]
categories = ["emulators"]

[lib]
name = "resid"

[features]
default = ["std"]
std = []

[dependencies]
bit_field = "0.10"
libm = { version = "0.2.0", optional = true }

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "sampler_bench"
harness = false
